# fft-benchmark

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.packages  Makefile  README.md  benchmark.hpp  benchmark.py  bootstrap.sh  docker-compose.yml  fft_benchmark.cpp  fftw.hpp  ipp.hpp  kfr.hpp  kissfft.hpp  mingw_fix.h  msys2-build.cmd  plot.py
.github/workflows/: build.yml
cmake/: DisableInSourceBuild.cmake  FindFFTW3.cmake  FindKFR.cmake  FindPackageStandard.cmake
cmake/Modules/: FindFFTW3.cmake  FindIPP.cmake  FindKFR.cmake  FindMKL.cmake
fftlibs/: CMakeLists.txt
fftlibs/fftw/: CMakeLists.txt  fftw.cpp
fftlibs/ipp/: CMakeLists.txt  ipp.cpp
fftlibs/kfr/: CMakeLists.txt  kfr.cpp
fftlibs/mkl/: CMakeLists.txt  mkl.cpp
share/benchmark/: fftdivision.sh  fftpot.sh  plot.C  plot.py
src/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  fft_benchmark.cpp  json.hpp  utils.cpp
src/fft/fftw/: CMakeLists.txt
src/fft/ipp/: CMakeLists.txt
src/fft/kfr5/: CMakeLists.txt
src/fft/kfr6/: CMakeLists.txt  main.cpp
src/fft/mkl/: CMakeLists.txt  main.cpp
